# enkf-knowledge-transfer

./: .gitattributes  .gitignore  CLAUDE.md  EnKF_dual-final-final- retune.ipynb  GS46_EnKF_parameters.xlsx  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
cho_enkf/: __init__.py  analysis.py  config.py  data_loader.py  enkf.py  io_utils.py  model.py  plotting.py  ukf.py
correction_v1_ensemble_size/: X_forecast_for_parameters_records_all.pkl  X_posterior_records_all.pkl  Z_all.pkl  computation_times.pkl  dataset_noise_variances.pkl  kQ_dict.pkl  kR_dict.pkl  para_records_all.pkl  rmse_results.pkl
data/: CHO_GS46_F_C_Inv.xlsx  CHO_GS46_F_all.xlsx  CHO_GS46_F_all_pl40.xlsx  CHO_T127_SNS_32.xlsx  CHO_T127_SNS_36.5.xlsx  CHO_T127_flask_PMJ.xlsx  Data_input_GS46_F_C_Inv 1.csv  Data_input_GS46_F_all 1.csv  Data_input_GS46_F_all_pl40 1.csv  dataset_summary_table.xlsx
documents/: EnKF knowledge transfer_ reviewer comments.docx  NEXT-FBA_reviewer_comments.docx  Reviewer Comments.docx  TODO  ~$viewer Comments.docx
documents/Knowledge_Transfer_Paper/: .latexmkrc  main.synctex(busy)  main.tex  references.bib
documents/Knowledge_Transfer_Paper/Sections/: Abstract.tex  Acknowledgments.tex  Conclusions.tex  DataAvailability.tex  Intro.tex  (+14 more)
documents/Knowledge_Transfer_Paper_Reviewer/: main.tex  references.bib
scripts/: 01_ensemble_tuning.py  02_longterm_pred.py  03_irregular.py  04_priorcov_sensitivity.py  04_sensitivity.py  05_comparisons.py  05_figures.py  05_priormean_sensitivity.py  06_comparisons.py  07_ukf.py  gs46_params_only.py  run_all.py
(+13 files in other folders)
