[project]
name = "enkf_knowledge_transfer"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "notebook (>=7.5.4,<8.0.0)"
]
